--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,eclipse
 
 ### Eclipse ###
+
+Servers
+
 .metadata
 bin/
 tmp/
@@ -94,3 +97,5 @@ hs_err_pid*
 replay_pid*
 
 # End of https://www.toptal.com/developers/gitignore/api/java,eclipse
+
+
