--- a/spring/intellij/MemberManager/MemberManager/build.gradle
+++ b/spring/intellij/MemberManager/MemberManager/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-core', version: '5.3.16'
     implementation group: 'org.springframework', name: 'spring-context', version: '5.3.16'
     implementation group: 'org.springframework', name: 'spring-test', version: '5.3.16'
+    implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.16'
+
 
 
     compileOnly 'org.projectlombok:lombok:1.18.22'
