--- a/spring/intellij/TodoSpring/build.gradle
+++ b/spring/intellij/TodoSpring/build.gradle
@@ -34,6 +34,11 @@ dependencies {
 
 
 
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.31'
+
+    // https://mvnrepository.com/artifact/com.zaxxer/HikariCP
+    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.1'
 
 
     compileOnly 'org.projectlombok:lombok:1.18.22'
