--- a/spring/intellij/SpringMVC/build.gradle
+++ b/spring/intellij/SpringMVC/build.gradle
@@ -33,6 +33,12 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.16'
 
 
+    // https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload
+    implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
+
+    // https://mvnrepository.com/artifact/commons-io/commons-io
+    implementation group: 'commons-io', name: 'commons-io', version: '2.5'
+
 
 
 
