--- a/spring/intellij/SpringMVC/build.gradle
+++ b/spring/intellij/SpringMVC/build.gradle
@@ -32,6 +32,10 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-test', version: '5.3.16'
     implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.16'
 
+    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
+    implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.7.5'
+
+
 
     // https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload
     implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
