--- a/spring/intellij/TodoSpring/build.gradle
+++ b/spring/intellij/TodoSpring/build.gradle
@@ -27,46 +27,59 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 
+     // springframework, MVC, TEST
     implementation group: 'org.springframework', name: 'spring-core', version: '5.3.16'
     implementation group: 'org.springframework', name: 'spring-context', version: '5.3.16'
     implementation group: 'org.springframework', name: 'spring-test', version: '5.3.16'
     implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.16'
 
 
+    // Database Driver
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.31'
+    // Connection Pool
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.1'
 
+    // Spring JDBC
     implementation group: 'org.springframework', name: 'spring-jdbc', version: '5.3.19'
+    // Database Transaction
     implementation group: 'org.springframework', name: 'spring-tx', version: '5.3.19'
+
+    // Mybatis Framework
     implementation 'org.mybatis:mybatis:3.5.9'
+    // Spring + Mybatis 연동 모듈
     implementation 'org.mybatis:mybatis-spring:2.0.7'
 
 
-
-    // https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload
+    // commons-fileupload
     implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
-
-    // https://mvnrepository.com/artifact/commons-io/commons-io
+    // commons-io
     implementation group: 'commons-io', name: 'commons-io', version: '2.5'
 
 
+    // Validation
     implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.2.1.Final'
 
 
-
-
-
-
+    // lombok
     compileOnly 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
     testCompileOnly 'org.projectlombok:lombok:1.18.22'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
 
+
+    // log4j2
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.16.0'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.16.0'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.16.0'
 
+
+    // JSTL
     implementation group: 'jstl', name: 'jstl', version: '1.2'
+
+
+    // REST : jackson-databind
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.0'
+
 }
 
 test {
